# Pong-SDL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  ball.c  ball.h  main.c  main.cpp  player.c  player.h  score.c  score.h  state.c  state.h  ui.cpp  ui.h  util.c  util.h
dependencies/: CMakeLists.txt
